--- a/src/MinimalDetachedJws/MinimalDetachedJws.csproj
+++ b/src/MinimalDetachedJws/MinimalDetachedJws.csproj
@@ -9,10 +9,28 @@
     <Title>Detached JSON Web Signature (Minimal Implementation)</Title>
     <PackageLicenseExpression>MIT-0</PackageLicenseExpression>
     <Version>0.9.0.0</Version>
+    <Copyright>Copyright 2024 Roel van der Steen</Copyright>
+    <PackageProjectUrl>https://github.com/roelvandersteen/MinimalDetachedJws</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageIcon>jws.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="jws.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
